Bug 1169249 - Unregister service worker registration when uninstalling a service-worker-enabled application. r=baku